<resources>
    <string name="app_name">Minesweeper</string>
    <string name="difficulty_Easy">Easy</string>
    <string name="difficulty_Hard">Hard</string>
    <string name="difficulty_Extreme">Extreme</string>
    <string name="start_button">Start</string>
    <string name="end_game_button">Exit Game</string>
    <string name="new_game">New Game</string>
    <string name="game_status">End Game Status</string>
    <string name="end_game_image">End Game Image</string>
    <string name="flag_image">Flag Image</string>
    <string name="main_logo_desc">main logo of the game</string>
    <string name="records_button">Records</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="easy_records">Easy</string>
    <string name="hard_records">Hard</string>
    <string name="extreme_records">Extreme</string>
    <string name="first_score">1</string>
    <string name="second_score">2</string>
    <string name="third_score">3</string>
    <string name="score_number">No.</string>
    <string name="score_name">Name</string>
    <string name="score_time">Time</string>
    <string name="new_record">You Achived New Record !</string>
    <string name="name_type">Type Your Name Here</string>
    <string name="submit_button">Submit</string>

</resources>
