<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:padding="25dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:id="@+id/easy_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/easy_button_shape"
            android:text="@string/difficulty_Easy"
            android:textColor="#7A6060"
            android:textSize="12sp"
            style="@style/AppTheme"
            android:onClick="CHOOSE_EASY"> <!--TODO method name need to be changed-->
        </Button>

        <Button
            android:id="@+id/hard_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/hard_button_shape"
            android:text="@string/difficulty_Hard"
            android:textColor="#7A6060"
            android:textSize="12sp"
            android:layout_margin="5dp"
            style="@style/AppTheme"
            android:onClick="CHOOSE_HARD"> <!--TODO method name need to be changed-->
        </Button>

        <Button
            android:id="@+id/extreme_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/extreme_button_shape"
            android:text="@string/difficulty_Extreme"
            android:textColor="#7A6060"
            android:textSize="12sp"
            style="@style/AppTheme"
            android:onClick="CHOOSE_EXTREME"> <!--TODO method name need to be changed-->
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/start_button"
        android:background="@drawable/start_button_shape"
        android:onClick="START_GAME"> <!--TODO method name need to be changed-->
    </Button>

</LinearLayout>