<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:paddingBottom="25dp">

    <ImageView
        android:id="@+id/end_screen_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eight"
        android:contentDescription="@string/end_game_image"/>


    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/end_game_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/end_game_button_shape"
            android:gravity="center"
            android:text="@string/end_game_button"
            android:onClick="endGame">

        </Button>

        <Button
            android:id="@+id/start_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/start_button_shape"
            android:gravity="center"
            android:text="@string/start_button"
            android:onClick="startNewGame">

        </Button>

    </LinearLayout>


</LinearLayout>