<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RecordsFragment"
    android:background="@color/fragment_color"
    >

    <TableLayout
        android:id="@+id/record_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp">

        <!--Scores Header-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp">
            <!-- Number of score-->
            <TextView
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/score_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:gravity="center"/>
            <!--Name of the player-->
            <TextView
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
            <!--Player's time of game-->
            <TextView
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
        </TableRow>

        <!-- Easy Scores Header -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="39dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/easy_records"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_weight="3"
                android:gravity="center"/>
        </TableRow>

        <!-- Easy First Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Easy Score Number-->
            <TextView
                android:id="@+id/easy_first_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/first_score" />
            <!-- Easy Player's Name -->
            <TextView
                android:id="@+id/easy_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Easy Player's Time -->
            <TextView
                android:id="@+id/easy_first_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>

        <!-- Easy Second Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Easy Score Number-->
            <TextView
                android:id="@+id/easy_second_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/second_score" />
            <!-- Easy Player's Name -->
            <TextView
                android:id="@+id/easy_second_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Easy Player's Time -->
            <TextView
                android:id="@+id/easy_second_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>

        <!-- Easy Third Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Easy Score Number-->
            <TextView
                android:id="@+id/easy_third_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/third_score" />
            <!-- Easy Player's Name -->
            <TextView
                android:id="@+id/easy_third_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Easy Player's Time -->
            <TextView
                android:id="@+id/easy_third_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>


        <!-- Hard Scores Header -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hard_records"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_weight="3"
                android:gravity="center"/>
        </TableRow>

        <!-- Hard First Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Hard Score Number-->
            <TextView
                android:id="@+id/hard_first_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/first_score" />
            <!-- Hard Player's Name -->
            <TextView
                android:id="@+id/hard_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Hard Player's Time -->
            <TextView
                android:id="@+id/hard_first_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>

        <!-- Hard Second Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Hard Score Number-->
            <TextView
                android:id="@+id/hard_second_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/second_score" />
            <!-- Hard Player's Name -->
            <TextView
                android:id="@+id/hard_second_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Hard Player's Time -->
            <TextView
                android:id="@+id/hard_second_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>

        <!-- Hard Third Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Hard Score Number-->
            <TextView
                android:id="@+id/hard_third_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/third_score" />
            <!-- Hard Player's Name -->
            <TextView
                android:id="@+id/hard_third_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Hard Player's Time -->
            <TextView
                android:id="@+id/hard_third_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>


        <!-- Extreme Scores Header -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/extreme_records"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_weight="3"
                android:gravity="center"/>
        </TableRow>

        <!-- Extreme First Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Extreme Score Number-->
            <TextView
                android:id="@+id/extreme_first_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/first_score" />
            <!-- Extreme Player's Name -->
            <TextView
                android:id="@+id/extreme_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Extreme Player's Time -->
            <TextView
                android:id="@+id/extreme_first_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>

        <!-- Extreme Second Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Extreme Score Number-->
            <TextView
                android:id="@+id/extreme_second_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/second_score" />
            <!-- Extreme Player's Name -->
            <TextView
                android:id="@+id/extreme_second_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Extreme Player's Time -->
            <TextView
                android:id="@+id/extreme_second_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>

        <!-- Extreme Third Score -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">
            <!-- Extreme Score Number-->
            <TextView
                android:id="@+id/extreme_third_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/third_score" />
            <!-- Extreme Player's Name -->
            <TextView
                android:id="@+id/extreme_third_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <!-- Extreme Player's Time -->
            <TextView
                android:id="@+id/extreme_third_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>
</FrameLayout>